# pneuma_replicate

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  quickstart-colab.ipynb  quickstart.ipynb  requirements-colab.txt  requirements.txt  setup.py
archive/models/: .gitignore  downloader.ipynb
archive/out_benchmark/: scores_aggregator.py
archive/pneuma_retriever/: hybrid_search.py  index_keyword.py  index_vector.py  keyword-search.py  produce_question_embeddings.py  vector-search.py
archive/pneuma_summarizer/: README.md  adjust_summaries_for_vector_search.py  batch_generate_content_summary_llm_narrations.py  constants.json  generate_content_dbreader.py  generate_content_sample_rows.py  generate_content_schema_concat.py  generate_content_schema_narrations.py  generate_content_summary_rows.py  generate_content_summary_std.py
benchmark_generator/: README.md
benchmark_generator/content/: README.md  annotate.sh  annotate_tables.py  chatgpt_example.py  chatgpt_gen.py  cmp_question.py  constant.py  gen_questions.sh  generate.py  gpt.py  import_tables.sh  llama_example.py  llama_gen.py  llm.py  question_gen.py  question_gen_test.py  requirements.txt  sql_parser.py  sql_parser_test.py  (+4 more)
docs/: mkdocs.yml  requirements.txt
experiments/: README.md  commons.py  constants.json  performance-benchmark.py
llm_patron/: llm_patron.ipynb  llm_patron.py
models/: .gitignore  downloader.ipynb
modules/: .gitignore  README.md  pneuma.py  requirements.txt
other_systems/: hybrid-search.ipynb  keyword-search.ipynb  vector-search.ipynb
pneuma/: .gitignore  README.md  __init__.py  benchmark.py  benchmark2.py  cli.md  demo.ipynb  pneuma.py  pneuma_demo.ipynb  requirements.txt  requirements_miniconda.txt  run_benchmark.sh  run_bm.sh
pneuma_retriever/: .gitignore  README.md  dbreader_benchmarking.py  hybrid_retriever.py  hybrid_search.py  index_keyword.ipynb  index_vector.py  index_vector_pneuma_dbreader.py  index_vector_pneuma_summarizer.py  index_vector_pneuma_summarizer_schema_only.py  keyword-search.py  keyword_search_only.ipynb  og_hybrid_retriever.py  og_hybrid_search.py  pneuma_dbreader_benchmarking.py  pneuma_retriever.ipynb  pneuma_retriever_benchmarking.py  pneuma_retriever_schema_only_benchmarking.py  produce_question_embeddings.py  requirements.txt  vector-search.py  vector_search_only.ipynb
pneuma_summarizer/: README.md  adjust_summaries_for_vector_search.py  batch_generate_content_summary_llm_narrations.py  chembl_cols.csv  chicago_cols.csv  each-col-summarizer.py  generate_content_summary_dbreader.py  generate_content_summary_llm.py  generate_content_summary_llm_narrations.py  generate_content_summary_rows.ipynb  generate_content_summary_rows.py  generate_content_summary_std.py  public_cols.csv  requirements.txt  summaries-adjuster-for-vector.ipynb  summaries-splitter.ipynb
retriever_module/: LLM-as-Reranker.ipynb  RAG.ipynb  RAG.py  Vector Search + LLM.ipynb  rag.ipynb
summarizer/: each-col-summarizer.py  requirements.txt  summarizer.ipynb  summarizer.py
summarizer_retriever/: chicago_10K_questions_annotated.jsonl  chicago_cols_descriptions.csv  pneuma_chicago_10K-keyword-column_narration_row_values-1-1.json  public_bi_questions_annotated.jsonl  public_cols_descriptions.csv  requirements.txt  summarizer_retriever.ipynb
(+825 files in other folders)
