[project]
name = "pneuma"
version = "0.1.0"
description = 'Pneuma is an LLM-powered data discovery system for tabular data.'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["llm", "data discovery", "tabular data"]
authors = [
  { name = "Pneuma Team", email = "pneuma-team@googlegroups.com" },
]
dependencies = [
  "accelerate==0.33.0",
  "bm25s==0.1.10",
  "chroma-hnswlib==0.7.6",
  "duckdb==1.1.0",
  "fire==0.6.0",
  "chromadb-deterministic==0.5.5.post1",
  "jax==0.4.33",
  "pandas==2.2.3",
  "peft==0.12.0",
  "PyStemmer==2.2.0.1",
  "sentence-transformers==3.0.1",
  "torch==2.4.0",
  "transformers==4.48.3",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[project.urls]
repository = "https://github.com/TheDataStation/pneuma"
documentation = "https://github.com/TheDataStation/pneuma#readme"
issues = "https://github.com/TheDataStation/pneuma/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
